--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,12 @@ colorama==0.4.6
 distlib==0.3.8
 filelock==3.15.4
 Flask==3.0.3
+Flask-Cors==4.0.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+mysql-connector-python==9.0.0
 platformdirs==4.2.2
+python-dotenv==1.0.1
 virtualenv==20.26.3
 Werkzeug==3.0.3
